# vidalia

./: Cargo.toml  Dockerfile  Dockerfile-dev  README.md  docker-compose.yml  docker-rel  docker-run  main.go
config/: main.go
image/: analyze.go  main.go  main_test.go  mime.go  storage.go  versions.go  versions_animated.go  versions_raster.go
runner/: main.go
src/: lib.rs  main.rs  server.rs  types.rs
src/analyzers/: hash.rs  mod.rs
src/transforms/: animation.rs  downsize.rs  downsize_to_width.rs  ffmpeg.rs  fit_width.rs  mod.rs
test/: animated_image_processing_test.go  helpers.go  large_image_processing_test.go  small_image_processing_test.go
tests/: analyzers_test.rs  animation_test.rs  downsize_test.rs  downsize_to_width_test.rs  ffmpeg_test.rs  fit_width_test.rs  utils.rs
