[package]
name = "vidalia"
version = "0.1.0"
authors = ["little-bobby-tables"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
iron = "0.5.1"
multipart = "0.13"
rand = "0.3"

[dependencies.rustdct]
git = "https://github.com/ejmahler/rust_dct"

[dependencies.magick_rust]
git = "https://github.com/little-bobby-tables/magick-rust"
branch = "color-funcs"

[dev-dependencies.reqwest]
git = "https://github.com/seanmonstar/reqwest"
branch = "master"

[profile.release]
opt-level = 3
lto = true
rpath = false
debug = false
debug-assertions = false
codegen-units = 1
